fix button alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -246,6 +246,7 @@ body {
   font-size: 1.2rem;
   padding: 0 1rem 0.5rem;
 }
+.section__content,
 .section__text,
 .article__text,
 .article-section__text {
@@ -254,6 +255,10 @@ body {
   margin: 0 auto;
   max-width: 50rem;
   box-sizing: border-box;
+}
+.section__content > .section__text {
+  padding-left: 0;
+  padding-right: 0;
 }
 .section__text:last-child,
 .article__text:last-child,
@@ -283,7 +288,7 @@ body {
   display: grid;
   gap: 1rem;
   max-width: max-content;
-  margin: 0 auto 0 2rem;
+  margin: 0 auto 0 0;
   padding-bottom: 3rem;
 }
 .button {
@@ -303,7 +308,7 @@ body {
 .details {
   margin: 1rem auto;
   max-width: 50rem;
-  padding: 0 1rem;
+  padding: 0;
   box-sizing: border-box;
 }
 .details__summary {
